FIX: z-index changed for avatar profile in settings page and subscribe popup

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -1048,7 +1048,7 @@
     }
   }
 
-  &:not(.subscribe-popup__header) {
+  &:not(.subscribe-popup__header):not(.settings-page) {
 
     .header-scrolled & {
 
